main.css
/* ... */
  @media screen and (max-width: 850px){
    
  nav{z-index: 30; width: 40px; height: 40px; margin:0; padding: 0; top: 3px; right: 3px;}

  .hamburger-icon {z-index: 32; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;}
      .hamburger-icon-piece {
        z-index: 32;
        width: 25px;
        height: 5%;
        background-color: white;
        border-radius: 1rem;
      }
  nav button{
    z-index: 33;
    display: block;
    visibility: visible;
    position: fixed;
    background: none;
    height: 40px;
    width: 40px;
    margin: 0;
    padding: 0;
    border: 0;
    top: 0;
    right: 0;
  }
  #topnav-menu{
    width: 10rem; height: 14rem; margin: 0; position: fixed; top: 3px; right: 3px; /*fix: added measurements here instead of on nav element - this way the nav doesn't stay while only its content is translated*/
    z-index: 31;
    translate: 300vw 0;
    transition: translate 0.3s ease-in-out; 
  }
    #topnav {
      z-index: 36;
      width: 100%;
      height: 100%;
      background-color: #12171df3;
      flex-direction: column;
      justify-content: space-evenly;
      font-size: large;
      align-items:flex-start; 
    }
  }
/*HAMBURGER MENU SOLUTION FOUND - SYNTAX ERROR ON BELOW (+ adjacent sibling combinator used instead of general sibling ~, and placed in wrong place*/
 
#topnav-open[aria-expanded="true"] ~ #topnav-menu {
  translate: 0; 
}

@media (prefers-reduced-motion){
  #topnav-open[aria-expanded="true"] ~ #topnav-menu {
    opacity: 1;
  }
}
/* #topnav-open[aria-expanded="true"] {
    + #topnav-menu{translate: 0;} the + here is necessary for this to be properly selected!!
  
    @media (prefers-reduced-motion){
      + #topnav-menu{opacity: 1;}
    }
  }   
*/


/*header*/
                              
header {
width: 95%; 
display: grid;
grid-template: 100%/100%;
height: 100svh;   /*fix for full screen logo at start*/
min-height: 500px; /*fix for overlap on small windows with above*/
}
    header>.logo {width: 100%; grid-area: 1/1/1/1; margin:0; padding:0;border:0;} /*use grid to overlap the imgs by forcing into the same grid space*/
    header>div {display: flex;justify-content: center; aspect-ratio: 1350/638;} /*aspect ratio set to match roots img so they stay the same size overlayed on eachother when the viewport changes*/
    #roots {z-index: 1;}
    #tree {
      flex:none; height: 70%; z-index: 2;}
    
    #tree-img {height: 100%; width:100%; transition: transform .5s ease-in-out;}
       #tree-img:hover {
      transform: scale(1.2) translateY(-5%); 
     } 


            h1{position: relative; height: 1lh; top: 35%; left:3%; font-size: 9vw; color:#e3f5ff; z-index: 3;}

            @media screen and (max-width: 850px){
              header>.logo {height: 500px; margin-top: 20svh;}/*margin-top: 50px;*/
              #roots { display: none; visibility: hidden;}
              h1{top: 200px; font-size:53px;}
            }

            @media screen and (max-width: 400px){

            }


    /*TODO: fix styling of header so its elements can be zoomed*/
    /*TODO: fix header tree and h1 so that the tree is below the text but can be hovered easily without the text getting in the way at all
    -possible fix could be to just have the image on top but alter it so that the tree forms a "t" to blend it in with the text*/

    

/*main*/
main {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
}



/*load screen spaceship scroll animation*/


.loadscreen {
  width: 100%;
  height: 3000px;
/*  background-color: red;*/
background-image: url(/RoomToRoam/images/starV1frame1.png);
background-repeat: repeat;

  position: absolute;
  top: 75svh;
  transform: translateY(0);
  z-index: 20;
  display: flex;
  justify-content: center;
}

.loadscreen>img{
  width: 184px;
  height: 255px;
}

@media (prefers-reduced-motion: no-preference) {
  @supports (animation-timeline: scroll()) {
    .loadscreen {
      animation: scrolldown 10s linear 1;
      animation-play-state: paused;
    
      animation-iteration-count: 1;
      animation-fill-mode: both;
    } 
  }
}
@media screen and (max-width: 850px){
  @keyframes scrolldown {
    0%{transform: translateY(0);}
    20%{transform: translateY(400px);}
    100%{transform: translateY(3500px); display: none; visibility: hidden;}
  }
}
@media screen and (min-width: 850px){
  @keyframes scrolldown {
    0%{transform: translateY(0);}
    20%{transform: translateY(500px);}
    100%{transform: translateY(4500px); display: none; visibility: hidden;}
  }
}
/*
:root * {
   Pause the animation 
  animation-play-state: paused;
   Bind the animation to scroll 
  animation-delay: calc(var(--scroll) * -1s);
   These last 2 properites clean up overshoot weirdness 
  animation-iteration-count: 1;
  animation-fill-mode: both;
}*/


/*sections*/
section {width: 100%; height:fit-content;}

/*section - mission statement and highlight reel backgrounds*/
        #highlight {
          width: 100%;
          aspect-ratio: 1350/690;
          /*aspect-ratio: 1350/1410;*/ /*aspect ratio matches background images*/
        /*  margin-top: -8%;
          margin-bottom: -13%;*/
          z-index: 3;
        }
          .highlightitem {margin: 0; z-index: 4;}
        
        #roots-highlight{
          width: 100%;
           aspect-ratio: 1350/690;
        }

          


            #roots-missionstatement{
              aspect-ratio: 1350/390;
              width: 100%;
              background-image: url("/RoomToRoam/images/roots-missionstatement.png");
              background-repeat:no-repeat;
              background-size:cover;
            /* z-index: 3; */
            }

/*section - mission statement content*/

/*section - highlight reel content*/
 
#highlight>#roots-highlight{
  display: flex;
}
/* ... */

